Assembly support started.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,6 +5,24 @@ mapping {
   ivy.artifact.id                       = project.artifactId
   project.revision                      = project.version
 }
+assembly {
+  dirs {
+    pdf-docs = "resource/docs"
+  }
+  refs {
+    plugins      = "pdi-plugins.stage.dir"
+    runtime      = "runtime-lib.dir"
+    drivers      = "driver-lib.dir"
+    oss-licenses = "bin.dir"
+  }
+  clear-build-targets = ["resolve-pdf-docs",
+                         "resolve-init",
+                         "resolve-oss-licenses",
+                         "resolve-default",
+                         "resolve-runtime",
+                         "resolve-drivers",
+                         "resolve-plugins" ]
+}
 properties {
   parentGroupId    = pentaho-reporting-engine
   packaging        = jar
