--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,14 @@
 
   <dependencies>
     <dependency>
-        <groupId>org.apache.maven</groupId>
-        <artifactId>maven-embedder</artifactId>
-        <version>3.2.3</version>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-embedder</artifactId>
+      <version>3.2.3</version>
     </dependency>
     <dependency>
-    	<groupId>org.apache.ant</groupId>
-    	<artifactId>ant</artifactId>
-    	<version>1.9.4</version>
+      <groupId>org.apache.ant</groupId>
+      <artifactId>ant</artifactId>
+      <version>1.9.4</version>
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
@@ -49,9 +49,9 @@
       <version>${dependencies.scala.version}</version>
     </dependency>
     <dependency>
-    	<groupId>org.scala-lang.modules</groupId>
-    	<artifactId>scala-xml_${dependencies.scala.version.short}</artifactId>
-    	<version>1.0.2</version>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-xml_${dependencies.scala.version.short}</artifactId>
+      <version>1.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.clapper</groupId>
@@ -59,15 +59,64 @@
       <version>1.0.3</version>
     </dependency>
     <dependency>
-        <groupId>com.typesafe</groupId>
-        <artifactId>config</artifactId>
-        <version>1.2.1</version>
+      <groupId>com.typesafe</groupId>
+      <artifactId>config</artifactId>
+      <version>1.2.1</version>
     </dependency>
     <dependency>
-        <groupId>org.apache.ivy</groupId>
-        <artifactId>ivy</artifactId>
-        <version>2.3.0</version>
+      <groupId>org.apache.ivy</groupId>
+      <artifactId>ivy</artifactId>
+      <version>2.3.0</version>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>run-single</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.3.2</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <classpathScope>test</classpathScope>
+              <mainClass>com.rabbitstewdio.build.ivyconverter.Main</mainClass>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>run-dir</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.3.2</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <classpathScope>test</classpathScope>
+              <mainClass>com.rabbitstewdio.build.ivyconverter.MainForDir</mainClass>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
