Exclude module can either be stored in attribute "module" or attribute "name".

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,6 +5,10 @@ mapping {
   ivy.artifact.id                       = project.artifactId
   project.revision                      = project.version
 }
+ivy-mapping {
+  default = compile
+  client  = compile
+}
 assembly {
   dirs {
     pdf-docs = "resource/docs"
