Normalize dependencies and allow to hard-code groupIds, as they are unlikely to change. Inherit conf from defaultconf attribute Add assembly support. Refactored the maven pom generation into smaller pieces.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,10 +14,14 @@ assembly {
     pdf-docs = "resource/docs"
   }
   refs {
-    plugins      = "pdi-plugins.stage.dir"
-    runtime      = "runtime-lib.dir"
+    plugin       = "pdi-plugins.stage.dir"
     drivers      = "driver-lib.dir"
     oss-licenses = "bin.dir"
+  }
+  copy {
+    runtime      = "runtime-lib.dir"
+    compile      = "lib.dir"
+    test         = "testlib.dir"
   }
   clear-build-targets = ["resolve-pdf-docs",
                          "resolve-init",
@@ -35,11 +39,25 @@ properties {
   parentPath       = "../pom.xml"
   sourceDir        = "source"
   testSourceDir    = "test-src"
+  resolve-group-id = true
+  dependency-pattern = "dependency.{0}.{1}.version"
 }
 includes = [
   "junit\\.sysprop\\..*"
 ]
 excludes = [
+  "properties\\.parent.*"
+  "reporting\\.build-pkg.*"
+  ".*\\.build-pkg\\..*"
+  "package\\..*"
+  "stage\\.dir\\..*"
+  "env\\..*"
+  "dist\\..*"
+  "deb\\..*"
+  "assembly\\..*"
+  "linuxPackage\\..*"
+  "rpm\\..*"
+  "report-designer\\.dir\\..*"
   "release"
   "basedir"
   "ivyfile"
